add_executable(firstTest firstTest.cpp)
target_link_libraries(firstTest PRIVATE libdl)
target_link_libraries(firstTest PRIVATE Catch2)
target_compile_features(firstTest PRIVATE cxx_std_17)
add_test(NAME firstTest COMMAND firstTest)

add_executable(reshapings reshapings.cpp)
target_link_libraries(reshapings PRIVATE libdl)
target_link_libraries(reshapings PRIVATE Catch2)
target_compile_features(reshapings PRIVATE cxx_std_17)
add_test(NAME reshapings COMMAND reshapings)

add_executable(conv conv.cpp)
target_link_libraries(conv PRIVATE libdl)
target_link_libraries(conv PRIVATE Catch2)
target_compile_features(conv PRIVATE cxx_std_17)
add_test(NAME conv COMMAND conv)

add_executable(layerbasics layerbasics.cpp)
target_link_libraries(layerbasics PRIVATE libdl)
target_link_libraries(layerbasics PRIVATE Catch2)
target_compile_features(layerbasics PRIVATE cxx_std_17)
add_test(NAME layerbasics COMMAND layerbasics)

add_executable(errorhandling errorhandling.cpp)
target_link_libraries(errorhandling PRIVATE libdl)
target_link_libraries(errorhandling PRIVATE Catch2)
target_compile_features(errorhandling PRIVATE cxx_std_17)
add_test(NAME errorhandling COMMAND errorhandling)

add_executable(experimental experimental.cpp)
target_link_libraries(experimental PRIVATE libdl)
target_link_libraries(experimental PRIVATE Catch2)
target_compile_features(experimental PRIVATE cxx_std_17)
add_test(NAME experimental COMMAND experimental)
